# genai-learning

./: Dockerfile  README.md  check_key.py  main.py  pyproject.toml
src/01_basics/: hello_ai.py
src/02_langchain/: chatbot.py  long_term_memory.json  memory_systems.py  prompt_templates.py  structured_output.py
src/03_langgraph/: ai_agent.py  deep_agents.py  hitl_agent.py  langgraph_routing.py  langgraph_state.py  memory_filesystem.py  memory_filesystems.py  middleware_tools.py  multi_agent.py  supervisor_agent.py
src/04_rag/: cost_control.py  evaluation.py  llmops.py  my_document.txt  query_cache.json  rag_basic.py  rag_chunking.py  rag_guardrails.py  rag_hybrid.py  sap_runbook.txt
src/05_fastapi/: chat_api.py
src/06_mcp/: mcp_server.py
src/skills/: incident_triage.md  jira_ticket.md  runbook_lookup.md
