[project]
name = "genai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.4.1,<1",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
]
